<resources>
    <string name="app_name">Academic Guidance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="action_logout">Logout</string>
    <string name="qr_code">QR Code</string>
    <string name="admin">Admin</string>
    <string name="assignment">Assignment</string>
    <string name="attend">Attend</string>
    <string name="create_attend">Create Attend</string>
    <string name="students">Students</string>
    <string name="chat_bot_results">ChatBot Results</string>
    <string name="lecture_name">Lecture Name</string>
    <string name="start">Start</string>
    <string name="previous_lectures">Previous Lectures</string>
    <string name="profile">Profile</string>
    <string name="start_chat_bot">Start ChatBot</string>
</resources>
