<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.SignIn">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="33sp"
        android:textStyle="bold|italic" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:inputType="text"
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/stroke"
                android:hint="@string/user_name"
                android:padding="10dp" />


            <EditText
                android:inputType="textWebEmailAddress"
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/stroke"
                android:hint="@string/email"
                android:padding="10dp" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/stroke"
                android:hint="@string/password"
                android:padding="10dp" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>